New audience field for Speaker
 - Reverted isDevelopment check for showing routes from .env setting
 - ScheduleTimeline: added audience field
 - SpeakerModal: added audience field
 - StopWatch: added prop - show-controls
 - UserAvatar: fixed alignment on bigger screens
 - UI: Added routing middleware for checking routes that need auth
 - stores/authentication: set user, token in localstorage
