# types/requests.go
@@ -18,6 +18,7 @@ type SpeakerPostRequest struct {
 	Name        string `json:"name"`
 	Topic       string `json:"topic"`
 	Description string `json:"description"`
+	Audience    string `json:"audience"`
 	Order       int    `json:"order"`
 	Minutes     int    `json:"minutes"`
 	ScheduleId  int    `json:"schedule_id"`
@@ -28,6 +29,7 @@ type SpeakerPutRequest struct {
 	Name        string `json:"name"`
 	Topic       string `json:"topic"`
 	Description string `json:"description"`
+	Audience    string `json:"audience"`
 	Order       int    `json:"order"`
 	Minutes     int    `json:"minutes"`
 	ScheduleId  int    `json:"schedule_id"`
