# web/handlers.go
@@ -400,6 +400,7 @@ func (c *Controller) ApiPostSpeakers(ctx *fiber.Ctx) error {
 		Name:        sr.Name,
 		Topic:       sr.Topic,
 		Description: sr.Description,
+		Audience:    sr.Audience,
 		Order:       order,
 		Minutes:     sr.Minutes,
 		ScheduleId:  sr.ScheduleId,
@@ -447,6 +448,7 @@ func (c *Controller) ApiPutSpeakers(ctx *fiber.Ctx) error {
 		Name:        sr.Name,
 		Topic:       sr.Topic,
 		Description: sr.Description,
+		Audience:    sr.Audience,
 		Order:       sr.Order,
 		Minutes:     sr.Minutes,
 		ScheduleId:  sr.ScheduleId,
